# django-http-adapter

./: README.md  pyproject.toml  setup.py
django_http_adapter/: admin.py  client.py  common.py  exceptions.py  mixins.py  models.py  settings.py  urls.py  utils.py  views.py
django_http_adapter/management/commands/: http_retry.py
django_http_adapter/migrations/: 0001_initial.py  0002_auto_20181126_1254.py
